plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.5'
	//id 'org.springframework.boot' version '3.4.4'
	//id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kyohwee'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Test dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.h2database:h2'

	//Spring Batch
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.batch:spring-batch-core:5.0.2'
	// Spring Boot Starter Quartz 추가
	implementation 'org.springframework.boot:spring-boot-starter-quartz'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
	//implementation 'io.swagger.core.v3:swagger-models-jakarta:2.2.7'

	// AWS S3 - Spring Cloud AWS 3.x
	implementation 'io.awspring.cloud:spring-cloud-aws-starter:3.0.1'
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.0.1'


	// Auth
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Core
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'


	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// Mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// S3
	implementation group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.12.619'

	// Apache Commons Codec for Base64
	implementation 'commons-codec:commons-codec:1.15'

	// Mail
	implementation 'org.springframework.boot:spring-boot-starter-mail'

// query dsl 버전 명시해야 jakarta사용 (javax X)
	implementation 'com.querydsl:querydsl-apt:5.0.0'
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	implementation 'com.querydsl:querydsl-core:5.0.0'

	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"

	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	//쿼리 로깅할때 ? 없애기
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

	//Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	//Cool SMS
	implementation 'net.nurigo:sdk:4.2.7'
	implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"


}

tasks.named('test') {
	useJUnitPlatform()
}
